--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>html游戏</title>
 </head>
   <p>作者：方黄旭</p>
-  <a href='贪吃蛇.html'>贪吃蛇<a>
+  <a href='贪吃蛇.html'>贪吃蛇（撞墙不会死）<a>
+  <a href='22.html'>贪吃蛇（撞墙会死）</a>
 </body>
 </html>
