--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html游戏</title>
 </head>
-  <p>作者：方黄旭</p>
-  <a href='贪吃蛇.html'>贪吃蛇（撞墙不会死）<a>
-  <a href='22.html'>贪吃蛇（撞墙会死）</a>
+  <p>作者：方黄旭<br></p>
+  <a href='贪吃蛇.html'>贪吃蛇（撞墙不会死）<br><a>
+  <a href='22.html'>贪吃蛇（撞墙会死）<br></a>
+  <a href='猜数游戏.html'>猜数游戏<<br>a>
 </body>
 </html>
