--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <a href='贪吃蛇.html'>贪吃蛇（撞墙不会死）<br><a>
   <a href='22.html'>贪吃蛇（撞墙会死）<br></a>
   <a href='猜数游戏.html'>猜数游戏<br><a>
+  <a href='sl.html'>扫雷<br></a>
 </body>
 </html>
