--- a/phone.html
+++ b/phone.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>html游戏</title>
+</head>
+  <p>作者：方黄旭<br></p>
+  <a href='猜数游戏.html'>猜数游戏<br><a>
+  <a href='sl.html'>扫雷<br></a>
+</body>
+</html>
