--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>html游戏</title>
 </head>
   <p>作者：方黄旭<br></p>
-  <a href='computur.html'>支持电脑的网页游戏<br><a>
+  <a href='computer.html'>支持电脑的网页游戏<br><a>
   <a href='phone.html'>支持手机的网页游戏<br></a>
 </body>
 </html>
