--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>作者：方黄旭</p>
     <a href='computer.html'>支持电脑的网页游戏</a><br>
     <a href='phone.html'>支持手机的网页游戏</a>
+    <a href='debug.html'>反馈意见（邮箱：fanghuangxu@163.com）</a>
 </body>
 </html>
