--- a/phone.html
+++ b/phone.html
@@ -7,6 +7,7 @@
 </head>
   <p>作者：方黄旭<br></p>
   <a href='猜数游戏.html'>猜数游戏<br><a>
-  <a href='https://www.minesweeper.cn/'>扫雷<br></a>
+  <a href='https://www.minesweeper.cn/'>扫雷<br></a><br>
+  <a href="pk.html">跑酷</a>
 </body>
 </html>
