--- a/phone.html
+++ b/phone.html
@@ -9,5 +9,6 @@
   <a href='猜数游戏.html'>猜数游戏<br><a>
   <a href='https://www.minesweeper.cn/'>扫雷<br></a><br>
   <a href="pk.html">跑酷</a>
+<a href="https://raw.bgithub.xyz/fanghuangxu/HtmlGame/refs/heads/main/pk.html">跑酷加速</a>
 </body>
 </html>
